--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -149,7 +149,11 @@
         <div class="grid">
           <!-- Abyss -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./abyss.png" alt="Abyss — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./ABYSS-EURUSD-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: ABYSS-EURUSD-PUBLICO">
+                <img src="./abyss.png" alt="Abyss — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Abyss</h3>
               <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
@@ -158,7 +162,11 @@
 
           <!-- Bosón Diurno -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./boson-diurno.png" alt="Bosón Diurno — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./BOSON-DIURNO-US30-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: BOSON-DIURNO-US30-PUBLICO">
+                <img src="./boson-diurno.png" alt="Bosón Diurno — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Bosón Diurno</h3>
               <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
@@ -167,7 +175,11 @@
 
           <!-- Bosón Nocturno -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./boson-nocturno.png" alt="Bosón Nocturno — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./BOSON-NOCTURNO-NAS100-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: BOSON-NOCTURNO-NAS100-PUBLICO">
+                <img src="./boson-nocturno.png" alt="Bosón Nocturno — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Bosón Nocturno</h3>
               <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
@@ -176,7 +188,11 @@
 
           <!-- Megavol -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./megavol.png" alt="Megavol — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./MEGAVOL-2.0-XAUUSD-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: MEGAVOL-2.0-XAUUSD-PUBLICO">
+                <img src="./megavol.png" alt="Megavol — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Megavol</h3>
               <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
@@ -185,7 +201,11 @@
 
           <!-- Nexus -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./nexus.png" alt="Nexus — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./NEXUS-GBPUSD-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: NEXUS-GBPUSD-PUBLICO">
+                <img src="./nexus.png" alt="Nexus — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Nexus</h3>
               <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
@@ -194,7 +214,11 @@
 
           <!-- Orion -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./orion.png" alt="Orion — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./ORION-SP500-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: ORION-SP500-PUBLICO">
+                <img src="./orion.png" alt="Orion — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Orion</h3>
               <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
@@ -203,7 +227,11 @@
 
           <!-- Plutón -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./pluton.png" alt="Plutón — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./PLUTON-NAS100-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: PLUTON-NAS100-PUBLICO">
+                <img src="./pluton.png" alt="Plutón — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Plutón</h3>
               <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
@@ -212,7 +240,11 @@
 
           <!-- Quantum Reversal -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./quantum-reversal.png" alt="Quantum Reversal — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./QUANTUM-REVERSAL-GBPJPY-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: QUANTUM-REVERSAL-GBPJPY-PUBLICO">
+                <img src="./quantum-reversal.png" alt="Quantum Reversal — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Quantum Reversal</h3>
               <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
@@ -221,7 +253,11 @@
 
           <!-- Taquion -->
           <article class="dev-card" tabindex="0">
-            <div class="thumb"><img src="./taquion.png" alt="Taquion — robot" loading="lazy" decoding="async"></div>
+            <div class="thumb">
+              <a href="./TAQUION-XAUUSD-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: TAQUION-XAUUSD-PUBLICO">
+                <img src="./taquion.png" alt="Taquion — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="dev-body">
               <h3 class="dev-title">Taquion</h3>
               <p class="dev-by"><strong>Developed by:</strong> dgotrader_6</p>
