--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -83,42 +83,20 @@
     .dev-card:focus-within{ outline:2px solid var(--accent); outline-offset:-2px; }
 
     /* Miniatura (ícono) más pequeño y limpio */
+    
     .thumb{
-      width:100%;
-      height: clamp(70px, 9vw, 110px);   /* altura compacta y responsiva */
-      background:#0e162c;
-      border-bottom:1px solid #1d2947;
-      display:flex; align-items:center; justify-content:center;
-      padding:10px;
+      height: clamp(90px, 12vw, 130px);   /* marco compacto y responsivo */
     }
     .thumb img{
-      max-width: 60%;   /* << ÍCONOS MÁS PEQUEÑOS */
-      max-height: 60%;  /* << ÍCONOS MÁS PEQUEÑOS */
-      width: auto; height: auto;
-      object-fit: contain;
-      display:block;
-      filter: drop-shadow(0 4px 10px rgba(0,0,0,.35));
+      max-width: 60%;                      /* tamaño del ícono dentro del marco */
+      max-height: 60%;
     }
-
-    .dev-body{
-      padding:12px; display:flex; flex-direction:column; gap:4px;
-    }
-    .dev-title{margin:0; font-size:1rem; letter-spacing:.2px; font-weight:700}
-    .dev-by{margin:0; color:var(--muted); font-size:.9rem}
-
-    /* Responsive: 4/3/2/1 por fila */
-    @media (max-width: 1200px){ .dev-card{grid-column: span 4} } /* 3 por fila */
-    @media (max-width: 900px){ .dev-card{grid-column: span 6} }  /* 2 por fila */
+    
     @media (max-width: 600px){
-      .dev-card{grid-column: span 12}                              /* 1 por fila */
-      .thumb{ height: clamp(80px, 24vw, 110px) }                   /* un pelín más pequeño en móvil */
+      .thumb{ height: clamp(80px, 24vw, 110px); }  /* un poco más bajo en móvil */
       .thumb img{ max-width: 58%; max-height: 58%; }
     }
 
-    .footer{
-      margin-top:auto; text-align:center; color:var(--muted); font-size:.88rem;
-      padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
-    }
 
     /* Accesibilidad */
     a:focus-visible, button:focus-visible { outline:2px solid var(--accent); outline-offset:2px; border-radius:10px; }
