--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -82,21 +82,49 @@
     .dev-card:hover{ transform: translateY(-2px); box-shadow:0 14px 34px rgba(0,0,0,.34); border-color:#2c58a6; }
     .dev-card:focus-within{ outline:2px solid var(--accent); outline-offset:-2px; }
 
-    /* Miniatura (ícono) más pequeño y limpio */
-    
+    /* Miniatura (ícono) — marco uniforme y centrado */
     .thumb{
-      height: clamp(90px, 12vw, 130px);   /* marco compacto y responsivo */
+      width:100%;
+      height: clamp(90px, 12vw, 130px);    /* marco compacto y responsivo */
+      background:#0e162c;
+      border-bottom:1px solid #1d2947;
+      display:flex; align-items:center; justify-content:center;
+      padding:10px;
     }
     .thumb img{
-      max-width: 60%;                      /* tamaño del ícono dentro del marco */
+      max-width: 60%;
       max-height: 60%;
-    }
-    
-    @media (max-width: 600px){
-      .thumb{ height: clamp(80px, 24vw, 110px); }  /* un poco más bajo en móvil */
-      .thumb img{ max-width: 58%; max-height: 58%; }
+      width:auto; height:auto;
+      object-fit:contain;
+      display:block;
+      filter: drop-shadow(0 4px 10px rgba(0,0,0,.35));
     }
 
+    /* Cuerpo de la tarjeta */
+    .dev-body{
+      padding:12px;
+      display:flex; flex-direction:column; gap:6px;
+    }
+    .dev-title{
+      margin:0;
+      font-size:1rem;                 /* título moderado y consistente */
+      letter-spacing:.2px;
+      font-weight:700;
+    }
+    .dev-by{
+      margin:0;
+      color:var(--muted);
+      font-size:.9rem;
+    }
+
+    /* Responsive: 4/3/2/1 por fila */
+    @media (max-width: 1200px){ .dev-card{grid-column: span 4} } /* 3 por fila */
+    @media (max-width: 900px){ .dev-card{grid-column: span 6} }  /* 2 por fila */
+    @media (max-width: 600px){
+      .dev-card{grid-column: span 12}                              /* 1 por fila */
+      .thumb{ height: clamp(80px, 24vw, 110px) }
+      .thumb img{ max-width: 58%; max-height: 58%; }
+    }
 
     /* Accesibilidad */
     a:focus-visible, button:focus-visible { outline:2px solid var(--accent); outline-offset:2px; border-radius:10px; }
@@ -120,10 +148,7 @@
       <section class="panel" aria-labelledby="devs-title">
         <h2 id="devs-title" style="margin:0 0 10px">Algoritmos</h2>
 
-        <!--
-          ORDEN PROFESIONAL: alfabético por nombre del bot.
-          Añadí títulos visibles (.dev-title) y mantuve el autor debajo.
-        -->
+        <!-- Orden alfabético; cada ícono abre su PDF -->
         <div class="grid">
           <!-- Abyss -->
           <article class="dev-card" tabindex="0">
@@ -245,7 +270,7 @@
       </section>
 
       <!-- Footer -->
-      <div class="footer">
+      <div class="footer" style="margin-top:auto; text-align:center; color:var(--muted); font-size:.88rem; padding-top:8px; border-top:1px solid rgba(255,255,255,.06);">
         © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
       </div>
 
