--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -6,7 +6,7 @@
   <title>DGO Trading — Sistemas de Apoyo</title>
   <meta name="description" content="Herramientas y recursos que apoyan el proceso operativo.">
   <meta property="og:title" content="DGO Trading — Sistemas de Apoyo">
-  <meta property="og:description" content="Accesos directos a herramientas clave y biblioteca de libros de trading.">
+  <meta property="og:description" content="Accesos directos a herramientas clave.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
@@ -94,30 +94,6 @@
     @media (max-width: 1024px){ .link-card{grid-column: span 6} }
     @media (max-width: 680px){ .link-card{grid-column: span 12} }
 
-    /* Books */
-    .books{display:grid; gap:12px}
-    .book-list{
-      list-style:none; margin:0; padding:0;
-      display:grid; gap:10px; grid-template-columns:repeat(12,1fr);
-    }
-    .book{
-      grid-column: span 6;
-      display:flex; align-items:center; justify-content:space-between; gap:12px;
-      background:#0f1731; border:1px solid #25365f; border-radius:12px; padding:12px;
-    }
-    .book .info{display:flex; align-items:center; gap:12px; min-width:0}
-    .book .icon{
-      width:36px; height:36px; border-radius:8px; display:grid; place-items:center;
-      background:#0e162c; border:1px solid #1d2947; color:#9fb0d9;
-    }
-    .book .title{
-      color:var(--text); text-decoration:none; font-weight:700; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
-    }
-    .book .title:hover{text-decoration:underline}
-    @media (max-width: 780px){
-      .book{grid-column: span 12}
-    }
-
     .footer{
       margin-top:auto; text-align:center; color:var(--muted); font-size:.88rem;
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
@@ -158,66 +134,6 @@
             <div class="meta"><strong>MetaTrader 5</strong><span>Plataforma de ejecución</span></div>
           </a>
         </div>
-      </section>
-
-      <!-- Libros de trading -->
-      <section class="panel" aria-labelledby="books-title">
-        <h2 id="books-title" style="margin:0 0 10px">Libros de trading</h2>
-
-        <ul class="book-list" id="book-list">
-          <!-- Libro 1 -->
-          <li class="book">
-            <div class="info">
-              <div class="icon" aria-hidden="true">
-                <!-- Icono de libro (SVG inline) -->
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
-                </svg>
-              </div>
-              <a class="title" href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener">El método Wyckof (PDF)</a>
-            </div>
-            <a class="btn small" href="./el_metodo_wyckof.pdf" target="_blank" rel="noopener" aria-label="Abrir El método Wyckof (PDF)">Abrir</a>
-          </li>
-
-          <!-- Libro 2 -->
-          <li class="book">
-            <div class="info">
-              <div class="icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
-                </svg>
-              </div>
-              <a class="title" href="./exhuberancia-irracional.pdf" target="_blank" rel="noopener">Exhuberancia irracional (PDF)</a>
-            </div>
-            <a class="btn small" href="./exhuberancia-irracional.pdf" target="_blank" rel="noopener" aria-label="Abrir Exhuberancia irracional (PDF)">Abrir</a>
-          </li>
-
-          <!-- Libro 3 -->
-          <li class="book">
-            <div class="info">
-              <div class="icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
-                </svg>
-              </div>
-              <a class="title" href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener">Los magos del mercado (PDF)</a>
-            </div>
-            <a class="btn small" href="./los-magos-del-mercado.pdf" target="_blank" rel="noopener" aria-label="Abrir Los magos del mercado (PDF)">Abrir</a>
-          </li>
-
-          <!-- Libro 4 (ahora dentro del UL) -->
-          <li class="book">
-            <div class="info">
-              <div class="icon" aria-hidden="true">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-                  <path d="M6 2h9a3 3 0 0 1 3 3v13a2 2 0 0 1-2 2H8a3 3 0 0 0-3 3V5a3 3 0 0 1 3-3zM8 6h8v2H8V6zm0 4h8v2H8v-2z"/>
-                </svg>
-              </div>
-              <a class="title" href="./trading-en-la-zona.pdf" target="_blank" rel="noopener">Trading en la Zona (PDF)</a>
-            </div>
-            <a class="btn small" href="./trading-en-la-zona.pdf" target="_blank" rel="noopener" aria-label="Abrir Trading en la Zona (PDF)">Abrir</a>
-          </li>
-        </ul>
       </section>
 
       <div class="footer">
