--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -253,6 +253,20 @@
             </div>
           </article>
 
+
+          <!-- Plutonio -->
+          <article class="dev-card" tabindex="0">
+            <div class="thumb">
+              <a href="./PLUTONIO-NAS100-PUBLICO.pdf" target="_blank" rel="noopener" title="Abrir PDF: PLUTONIO-NAS100-PUBLICO">
+                <img src="./plutonio.png" alt="Plutonio — robot" loading="lazy" decoding="async">
+              </a>
+            </div>
+            <div class="dev-body">
+              <h3 class="dev-title">Plutonio</h3>
+              <p class="dev-by"><strong>Developed by:</strong> be_profitable.fx</p>
+            </div>
+          </article>
+
           <!-- Taquion -->
           <article class="dev-card" tabindex="0">
             <div class="thumb">
