--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
           <div style="width:100%;text-align:center;line-height:26px;">
             <iframe frameborder="0" width="100%" height="140" loading="lazy"
               src="https://www.mql5.com/es/signals/widget/signal/77uy?t=dark&fw=html">
+              </iframe>
             <div class="swopyright">
               <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget"
                  rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
