--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading</title>
+  <title>DGO Capital</title>
   <meta name="description" content="De la idea al algoritmo para un trading real y consistente">
-  <meta property="og:title" content="DGO Trading">
+  <meta property="og:title" content="DGO Capital">
   <meta property="og:description" content="De la idea al algoritmo para un trading real y consistente">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
