--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
       <!-- Header -->
       <header>
         <div class="brand">
-          <img src="logo.png" alt="Logo DGO Trading">
+          <img src="logo.png" alt="Logo DGO Capital">
           <div>
-            <h1>DGO Trading</h1>
+            <h1>DGO Capital</h1>
             <div class="muted">Certeza en el proceso</div>
           </div>
         </div>
