--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
       <!-- Footer -->
       <footer>
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </footer>
 
     </div>
