--- a/desarrollos/index.html
+++ b/desarrollos/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Desarrollos</title>
-  <meta name="description" content="Portafolio de robots/algoritmos desarrollados por DGO Trading.">
-  <meta property="og:title" content="DGO Trading — Desarrollos">
+  <title>DGO Capital — Desarrollos</title>
+  <meta name="description" content="Portafolio de robots/algoritmos desarrollados por DGO Capital.">
+  <meta property="og:title" content="DGO Capital — Desarrollos">
   <meta property="og:description" content="Galería de EAs e indicadores desarrollados.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
@@ -137,7 +137,7 @@
       <!-- Header -->
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading" class="brand">
+        <img src="../logo.png" alt="Logo DGO Capital" class="brand">
         <div>
           <h1>Desarrollos</h1>
           <div class="muted">Galería de EAs e indicadores</div>
@@ -284,7 +284,7 @@
 
       <!-- Footer -->
       <div class="footer">
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </div>
 
     </div>
