--- a/logros/index.html
+++ b/logros/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading — Logros</title>
-  <meta property="og:title" content="DGO Trading — Logros">
+  <meta property="og:title" content="DGO Capital — Logros">
   <meta property="og:description" content="Capturas de resultados y certificaciones de fondeos.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
@@ -118,7 +118,7 @@
       <!-- Header -->
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading" class="brand">
+        <img src="../logo.png" alt="Logo DGO Capital" class="brand">
         <div>
           <h1>Logros</h1>
         </div>
@@ -224,7 +224,7 @@
 
       <!-- Footer -->
       <div class="footer">
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </div>
 
     </div>
