--- a/servicios/academia.html
+++ b/servicios/academia.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Academia</title>
+  <title>DGO Capital — Academia</title>
   <meta name="description" content="Próximamente disponible.">
-  <meta property="og:title" content="DGO Trading — Academia">
+  <meta property="og:title" content="DGO Capital — Academia">
   <meta property="og:description" content="Próximamente disponible.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
@@ -83,7 +83,7 @@
 
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading"
+        <img src="../logo.png" alt="Logo DGO Capital"
           style="height:59px; width:auto; border-radius:12px; border:1px solid #1d2947; box-shadow:0 4px 18px rgba(0,0,0,.35)">
 
         <div>
@@ -96,7 +96,7 @@
       </section>
 
       <div class="footer">
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </div>
 
     </div>
