--- a/servicios/codifica-tu-estrategia.html
+++ b/servicios/codifica-tu-estrategia.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Codifica tu estrategia</title>
+  <title>DGO Capital — Codifica tu estrategia</title>
   <meta name="description" content="Convierte tu idea de trading en un algoritmo fiable (Python / MQL5 ). Desarrollo de EAs e indicadores a medida, con backtests y soporte.">
-  <meta property="og:title" content="DGO Trading — Codifica tu estrategia">
+  <meta property="og:title" content="DGO Capital — Codifica tu estrategia">
   <meta property="og:description" content="Desarrollo profesional en MQL5: de la idea al algoritmo.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
@@ -76,7 +76,7 @@
 
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading"
+        <img src="../logo.png" alt="Logo DGO Capital"
           width="59" height="59" style="height:auto; border-radius:12px; border:1px solid #1d2947;">
 
         <div>
@@ -105,7 +105,7 @@
       </section>
 
       <div class="footer">
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </div>
 
     </div>
