--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Software de Copiado</title>
-  <meta name="description" content="Replicador DGO Trading. Replica operaciones con control y consistencia.">
-  <meta property="og:title" content="DGO Trading — Software de Copiado">
+  <title>DGO Capital — Software de Copiado</title>
+  <meta name="description" content="Replicador DGO Capital. Replica operaciones con control y consistencia.">
+  <meta property="og:title" content="DGO Capital — Software de Copiado">
   <meta property="og:description" content="Replica operaciones con un software robusto y sencillo de usar.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
@@ -125,7 +125,7 @@
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
         <div class="brand">
-          <img src="../logo.png" alt="Logo DGO Trading">
+          <img src="../logo.png" alt="Logo DGO Capital">
           <div>
             <h1>Software de Copiado</h1>
             <div class="muted">Replica operaciones de forma consistente y controlada</div>
@@ -141,7 +141,7 @@
           </div>
 
           <div>
-            <div class="eyebrow" id="hero-title">DGO Trading — Software de Copiado</div>
+            <div class="eyebrow" id="hero-title">DGO Capital — Software de Copiado</div>
             <p class="headline">
               Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.
             </p>
@@ -196,7 +196,7 @@
 
       <!-- Footer -->
       <div class="footer">
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </div>
 
     </div>
