--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Sistemas de Apoyo</title>
+  <title>DGO Capital — Sistemas de Apoyo</title>
   <meta name="description" content="Herramientas y recursos que apoyan el proceso operativo.">
-  <meta property="og:title" content="DGO Trading — Sistemas de Apoyo">
+  <meta property="og:title" content="DGO Capital — Sistemas de Apoyo">
   <meta property="og:description" content="Accesos directos a herramientas clave.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
@@ -107,7 +107,7 @@
       <!-- Header -->
       <header>
         <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
-        <img src="../logo.png" alt="Logo DGO Trading" class="brand">
+        <img src="../logo.png" alt="Logo DGO Capital" class="brand">
         <div>
           <h1>Sistemas de Apoyo</h1>
           <div class="muted">Accesos directos y recursos para ejecutar con claridad</div>
@@ -137,7 +137,7 @@
       </section>
 
       <div class="footer">
-        © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
+        © <span id="yr"></span> DGO Capital. Todos los derechos reservados.
       </div>
 
     </div>
