--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <div class="brand">
           <img src="logo.png" alt="Logo DGO Capital">
           <div>
-            <h1>DGO Capital</h1>
+            <h1>DGO CAPITAL</h1>
             <div class="muted">Certeza en el proceso</div>
           </div>
         </div>
@@ -422,7 +422,7 @@
         </div>
 
         <p style="margin:0 0 6px; font-size:1.1rem; line-height:1.8; font-weight:500; text-align:justify;">
-          DGO transforma conocimiento de mercado en algoritmos. Bajo un marco cuantitativo, 
+          DGO Capital transforma conocimiento de mercado en algoritmos. Bajo un marco cuantitativo, 
           cada idea se contrasta con datos, se ajusta con precisión y se valida para sostener la consistencia en el tiempo.
         </p>
       </section>
