--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <div class="brand">
           <img src="logo.png" alt="Logo DGO Capital">
           <div>
-            <h1>DGO CAPITAL</h1>
+            <h1>DGO Capital</h1>
             <div class="muted">Certeza en el proceso</div>
           </div>
         </div>
