--- a/sistemas-de-apoyo/index.html
+++ b/sistemas-de-apoyo/index.html
@@ -131,7 +131,7 @@
           
           <a class="link-card" href="https://www.fxvps.pro/" target="_blank" rel="noopener" aria-label="Abrir Fxvps">
             <div class="logo"><img src="./fxvps.png" alt="Fxvps Logo"></div>
-            <div class="meta"><strong>Fxvps</strong><span>Servicios de servidores virtuales</span></div>
+            <div class="meta"><strong>Fxvps</strong><span>Servicio de servidores virtuales</span></div>
           </a>
 
           <a class="link-card" href="https://www.metatrader5.com/es" target="_blank" rel="noopener" aria-label="Abrir MetaTrader 5">
