--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                    rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
               </div>
               <p style="color:var(--muted);font-size:.75rem;margin-top:4px;">
-                (Señal 1) Gestionada por: <strong>Bosón Diurno</strong>; <strong>Bosón Nocturno</strong>; <strong>Orión</strong>; <strong>Megavol</strong>
+                Gestionada por: <strong>Bosón Diurno</strong>; <strong>Bosón Nocturno</strong>; <strong>Orión</strong>; <strong>Megavol</strong>
               </p>
             </div>
         
@@ -455,7 +455,7 @@
                    rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
               </div>
               <p style="color:var(--muted);font-size:.75rem;margin-top:4px;">
-                (Señal 2) Gestionada por: <strong>Abyss</strong>; <strong>Plutón</strong>
+                Gestionada por: <strong>Abyss</strong>; <strong>Plutón</strong>
               </p>
             </div>
         
