--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           <p class="side-note">Contenido y actualizaciones periódicas en redes sociales.</p>
 
           <!-- Instagram rojo con icono -->
-          <a class="cta insta" href="https://www.instagram.com/dgotrader_6?igsh=Z2JkcHhsODlweGht&utm_source=qr" target="_blank" rel="noopener">
+          <a class="cta insta" href="https://www.instagram.com/dgo_capital_?igsh=MTVxY28yc3JremxkMA%3D%3D&utm_source=qr" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" aria-hidden="true">
               <path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 4.5A4.5 4.5 0 1 1 7.5 13 4.51 4.51 0 0 1 12 8.5zm0 2A2.5 2.5 0 1 0 14.5 13 2.5 2.5 0 0 0 12 10.5zM17.75 7a1.25 1.25 0 1 1-1.25 1.25A1.25 1.25 0 0 1 17.75 7z"/>
             </svg>
