--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                    rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
               </div>
               <p style="color:var(--muted);font-size:.75rem;margin-top:4px;">
-                Gestionada por: <strong>Bosón Diurno</strong>; <strong>Bosón Nocturno</strong>; <strong>Orión</strong>; <strong>Megavol</strong>
+                Gestión por: <strong>Bosón Diurno</strong>; <strong>Bosón Nocturno</strong>; <strong>Orión</strong>; <strong>Megavol</strong>
               </p>
             </div>
         
@@ -454,7 +454,7 @@
                    rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
               </div>
               <p style="color:var(--muted);font-size:.75rem;margin-top:4px;">
-                Gestionada por: <strong>Abyss</strong>; <strong>Plutón</strong>
+                Gestión por: <strong>Abyss</strong>; <strong>Plutón</strong>
               </p>
             </div>
         
